# fask-course

./: README.md  app.py  pyproject.toml
templates/: home.html
